Citation rendering updates.

--- a/macro_paper.tex
+++ b/macro_paper.tex
@@ -143,11 +143,11 @@ Cleveland, Ohio 44106-7079, USA}
 
     More work has been done recently to identify additional ways to probe macro parameter space. With colleagues, some of us have proposed \vtwo{\citep{Sidhu2018auv}} using current Fluorescence Detectors that are designed to study High Energy Cosmic Rays, such as those of the Pierre Auger Observatory \vtwo{\citep{Abraham2010}}. Separately, we have suggested \vtwo{\citep{Sidhu2019granite}} that, for appropriate $M_x$ and $\sigma_x$, the passage of a macro through granite would form long tracks of melted and re-solidified rock that would be distinguishable from the surrounding granite. A citizen-science search for such tracks in commercially available granite slabs is planned to begin through the Zooniverse website sometime later this year. We have also identified the region of parameter space excluded by the null observation of fast-moving meteors ("bolides"), which should have been produced by sufficiently large and fast-moving macros and observed by either of two bolide-observing networks \vtwo{\citep{Sidhu2019bolide}}. We determined the region of parameter space that will be probed by planned expansion of the network that is still operating.
 
-    In these works concerning non-anti-baryonic neutral macros, energy is considered to be deposited in matter by the passing macro primarily through elastic scattering. \vtwo{The size of a macro, in comparison to a proton or neutron, means the \vtwo{geometric} cross section dominates the scattering process.} In this case, the energy deposited by a macro transiting the atmosphere 
+    In these works concerning non-anti-baryonic neutral macros, energy is considered to be deposited in matter by the passing macro primarily through elastic scattering. \vtwo{Unlike particle-dark-matter candidates, macros generically interact strongly with matter, so the elastic scattering cross-section is approximately the geometric cross-section.} In this case, the energy deposited by a macro transiting the atmosphere 
     \begin{equation}\label{eq:dedx}
         \frac{dE}{dx} = \sigma_x \rho v_x^2\,,
     \end{equation}
-    where $\rho \sim 1\,$ kg m$^{-3}$ is the density of the atmosphere at ground level, $\sigma_x$ is the \vtwo{geometric} cross-section of the macro, while $v_x$ is its speed. \vtwo{As $v_{x} >> v_{\rm{thermal, air}}$, typical momentum transfers will therefore be of order $m_b v_{x}$ and energy transfers of order $m_b v_{x}^2$.}
+    where $\rho \sim 1\,$ kg m$^{-3}$ is the density of the atmosphere at ground level, $\sigma_x$ is the \vtwo{geometric} cross-section of the macro, while $v_x$ is its speed. \vtwo{As $v_x$ is much greater than the thermal velocity of air molecules, typical momentum transfers will be of order $m_b v_{x}$ and energy transfers of order $m_b v_{x}^2$.}
 
     The speed of a macro traveling through the atmosphere is thus expected to evolve as
     \begin{equation}\label{eq:atmo_velocity}
@@ -155,7 +155,7 @@ Cleveland, Ohio 44106-7079, USA}
     \end{equation}
     where $\langle \rho \Delta\rangle$ is the integrated column density traversed along the macro trajectory from the point of entry to the location $x$. This will determine the maximum reduced cross-section $\sigma_x/M_x$ expected to deposit sufficient energy to produce an observable signal without being slowed excessively. In previous works e.g. \vtwo{\citet{Sidhu2019death, Sidhu2019bolide}}, this limiting value for macros that are interacting at the bottom of the atmosphere was found to be $\frac{\sigma_x}{M_x} \sim 10^{-4}\,$cm$^2$g$^{-1}\,$. This will serve as an upper bound for all Earth-based projections derived in this manuscript.
 
-    \vtwo{One may expect that macros with sufficiently large reduced cross-section would be captured by a planet or star and alter the density distribution of the planet or star. However, macros of interest, i.e. macros with parameters that are still allowed to provide all the dark matter, would be far denser than atomic density and sink to the center of the star or planet. Given the size of these macros, the total density perturbation would not be noticeable.}
+    \vtwo{One may expect that macros with sufficiently large reduced cross-section would be captured by a planet or star and alter the density distribution of the planet or star. However, macros of interest, i.e. macros with parameters that are still allowed to provide all the dark matter, would be far denser than atomic density and sink to the center of the star or planet. Given the size of these macros, the total density perturbation may have escaped notice.}
 
     As in previous work, we consider macros of a single mass and cross-section, even though a broad mass distribution is a reasonable possibility in the context of a composite dark-matter candidate.
 
@@ -182,7 +182,7 @@ Cleveland, Ohio 44106-7079, USA}
     \subsection*{Why Lightning is Jagged} % (fold)
     \label{sub:why_lightning_is_jagged}
 
-        \vtwo{Assuming each step in the stepped leader process has a random azimuthal angle, the probability that for every of N steps the direction is within $\theta$ degrees displacement from the plane defined by the observer and first step is $\left(\frac{\theta}{180}\right)^{N}$. For illustration purposes only, requiring a series of 10 steps to be straight -- and macros should have much more than that -- and adopting a significantly inflated upper bound of 10 degrees, the probability that a 10-step section of lightning is straight purely by chance is $2.8 \times 10^{-13}$. Again, we have underestimated the number of steps, N, and the maximum allowed degrees displacement, $\theta$. This accords with observations that straight lightning is very rare and requires no special techniques to detect.}
+        \vtwo{Assuming each step in the stepped-leader process has a random azimuthal angle, the probability that for every one of N steps the direction is within $\theta$ degrees displacement from the plane defined by the observer and first step is $\left(\frac{\theta}{180}\right)^{N}$. For illustration purposes only, requiring a series of 10 steps to be straight -- and macros should have much more than that -- and adopting a significantly inflated upper bound of 10 degrees, the probability that a 10-step section of lightning is straight purely by chance is $2.8 \times 10^{-13}$. Again, we have underestimated the number of steps, N, and overestimated the maximum allowed degrees of displacement. This accords with observations that straight lightning is very rare and requires no special techniques to detect.}
         
     % subsection why_lightning_is_jagged (end)
 
@@ -206,7 +206,7 @@ Cleveland, Ohio 44106-7079, USA}
 
         We review the key quantities about this plasma first; we refer the reader to reference \vtwo{\citep{Sidhu2018auv}} for more details. \vtwo{Due to the longevity of lightning leaders, we need only demonstrate that the macro channels contain as much charge density as a natural leader, and persist long enough for the lightning leader to ``lock in" along the macro path.} 
 
-        \vtwo{\citeauthor{Cyncynates2016} {\it et al.} \citep{Cyncynates2016} considered the formation of plasma channels by macros passing through rock. For passage through the atmosphere, additional cooling terms come into play: radiative cooling, expansion cooling, and turbulent mixing \citep{Picone1983}. Ignoring these for the moment, we can propagate the initial energy deposition by the macro outward radially away from that trajectory using the heat equation.
+        \vtwo{\citeauthor{Cyncynates2016} \citep{Cyncynates2016} considered the formation of plasma channels by macros passing through rock. For passage through the atmosphere, additional cooling terms come into play: radiative cooling, expansion cooling, and turbulent mixing \citep{Picone1983}. Ignoring these for the moment, we can propagate the initial energy deposition by the macro outward radially away from that trajectory using the heat equation.
         The temperature field after some time $t$ is}
         \begin{equation}\label{eq:temperature_field}
         	T(r,t) = \frac{\sigma_{x} v_x^2}{4\pi \alpha c_p}\frac{e^{-\frac{r^2}{4t\alpha}}}{t},
@@ -265,7 +265,7 @@ Cleveland, Ohio 44106-7079, USA}
         \vtwo{
         Clouds have complicated charge structure. Broadly speaking, clouds are net neutral with a main positive charge (often on top), and a main negative charge. The regions are roughly 10 km tall, for a total cloud complex of order 20 km. The ground charge, up to 4 km distant, is effectively an induced charge from the cloud. Smaller charge regions are common, for instance beneath the main bottom charge, with a corresponding dipole on the ground.
         
-        Lightning occurs between effectively all regions, including the "small" charge ones. Lighting acts to neutralize the local electric field, negating the potential difference between the two regions. When a macro passes through a cloud, as it transits each charge region it will induce intra-cloud lightning. We note that this lightning will have all the same signatures as groundstrokes, discussed in \ref{sec:signatures_of_macro_induced_lightning}, but is not the focus of this paper since the obscuration by clouds might make analysis challenging. Intra-cloud lightning \textit{might} -- stressing that this is speculative -- prevent groundstrokes if the macro passes through a small charge region between the main bottom charge and ground. In this scenario, the small charge region might be neutralized and the charge in cloud and ground is now of the same sign. Not enough is known to determine whether the charge neutralization is sufficient to prevent groundstrokes, or if this picture is even correct.
+        Lightning occurs between effectively all regions, including the ``small" charge ones. Lighting acts to neutralize the local electric field, negating the potential difference between the two regions. When a macro passes through a cloud, as it transits each charge region it will induce intra-cloud lightning. We note that this lightning will have all the same signatures as groundstrokes, discussed in \ref{sec:signatures_of_macro_induced_lightning}, but is not the focus of this paper since the obscuration by clouds might make analysis challenging. Intra-cloud lightning \textit{might} -- stressing that this is speculative -- prevent groundstrokes if the macro passes through a small charge region between the main bottom charge and ground. In this scenario, the small charge region might be neutralized and the charge in cloud and ground is now of the same sign. Not enough is known to determine whether the charge neutralization is sufficient to prevent groundstrokes, or if this picture is even correct.
         
         The frequent case that the macro passes from the main bottom charge straight to ground is much simpler. When the macro pierces cloud bottom, the induced intracloud lightning occurred roughly 10 km and 40 ms away. At ground connection that distance can be 14 km and 60 ms distant. Given that small charge regions regularly produce lightning, the main charge region will not be depleted by the earlier and distant discharge.
 
@@ -390,7 +390,7 @@ Cleveland, Ohio 44106-7079, USA}
 \section{Jupiter} % (fold)
 \label{sec:jovian_bolides}
 
-    Given its size relative to Earth, a search for macros using Jupiter (or another gas giant planet) as the target holds great potential for exploring larger macro masses than can be explored using Earth as the target. \vtwo{Although on Earth we have the advantage of being able to search for the effects of macros on targets like rocks that have "integrated" for extremely long exposure times \vtwo{\citep{Sidhu2019granite}}, that advantage is nullified when looking for transient phenomena such as lightning flashes, that need to be observed in real time. Thus, a potential signal of macros is the production of straight lightning in the Jovian atmosphere as discussed above for Earth's atmosphere. In this section we will briefly discuss some of the potential power and challenges of using Jupiter as a target for macro-induced lightning signals. The major strength of searching for straight Jovian lightning is the size of the target. The surface area of Jupiter is 125 times that of Earth, suggesting that it is a potentially valuable target to search for macro-induced fluorescence or macro-induced lightning. Lightning has been observed near the Jovian poles by every passing satellite. Earlier mysteries as to its origins have recently been clarified based on observations from the Juno mission \vtwo{\citep{Brown2018}}, and it is now understood to be be described by essentially the same physics as terrestrial lightning.}
+    Given its size relative to Earth, a search for macros using Jupiter (or another gas giant planet) as the target holds great potential for exploring larger macro masses than can be explored using Earth as the target. \vtwo{Although on Earth we have the advantage of being able to search for the effects of macros on targets like rocks that have ``integrated" for extremely long exposure times \vtwo{\citep{Sidhu2019granite}}, that advantage is nullified when looking for transient phenomena such as lightning flashes, that need to be observed in real time. Thus, a potential signal of macros is the production of straight lightning in the Jovian atmosphere as discussed above for Earth's atmosphere. In this section we will briefly discuss some of the potential power and challenges of using Jupiter as a target for macro-induced lightning signals. The major strength of searching for straight Jovian lightning is the size of the target. The surface area of Jupiter is 125 times that of Earth, suggesting that it is a potentially valuable target to search for macro-induced fluorescence or macro-induced lightning. Lightning has been observed near the Jovian poles by every passing satellite. Earlier mysteries as to its origins have recently been clarified based on observations from the Juno mission \vtwo{\citep{Brown2018}}, and it is now understood to be be described by essentially the same physics as terrestrial lightning.}
 
     \vtwo{
     Making concrete claims about the observability of macro-induced lightning on Jupiter is difficult. This is due to two factors: the physics of lightning in Jupiter's atmosphere is even less well-understood than that on Earth, and the logistics of monitoring Jovian lightning is much more difficult given its distance. For example, it is currently unclear why lightning does not form over the entire surface of Jupiter but only the poles. This could reduce the region of parameter space that could be probed through this method. One additional difference is that in the case of Jovian lightning, we are only concerned with cloud-cloud lightning, as opposed to focusing on cloud-ground lightning for Earth. This is because the `ground' for Jupiter is essentially unobservable, and thus it is more useful to look for intercloud lightning strikes in the upper layers of the Jovian atmosphere. In addition, observing the morphology of Jovian lightning presents obvious technical challenges, but could be overcome either by using high-resolution space telescopes from earth, or by using future Jovian weather satellites that will make precise measurements of Jupiter's atmospheric phenomenon. Given that many lightning strikes on Jupiter will be obscured by the cloud cover, it would be more advantageous to use detection methods that do not rely on visual morphology to differentiate macro-induced lightning from organic lightning. For example, as mentioned earlier, one could potentially use the RF signal to differentiate straight lightning bolts without visual confirmation. This could be accomplished using RF instrumentation on existing probes such as JUNO, or proposed upcoming probes such as the Jupiter Ganymede Orbiter \vtwo{\citep{Brown2018}}. An exact calculation of sensitivity would require a better estimate of the amplitude of RF signals from macro-induced Jovian lightning, which is outside the scope of this paper.
