--- a/references.bib
+++ b/references.bib
@@ -572,7 +572,7 @@ archivePrefix = "arXiv",
 
 
 @ARTICLE{Sidhu2020charge,
-       author = "Singh Sidhu, Jagjit",
+       author = "Sidhu, Jagjit S.",
         title = "{Charge Constraints of Macroscopic Dark Matter}",
        eprint = "1912.04732",
 archivePrefix = "arXiv",
@@ -587,7 +587,7 @@ archivePrefix = "arXiv",
 
 
 @misc{Sidhu2020anti,
-       Author = {Jagjit Singh Sidhu and Robert J. Scherrer and Glenn Starkman},
+       Author = "{Sidhu}, Jagjit S. and {Scherrer}, Robert J. and {Starkman}, Glenn D.",
         Title = {Antimatter as Macroscopic Dark Matter},
          Year = {2020},
        Eprint = {arXiv:2006.01200},
@@ -595,7 +595,7 @@ archivePrefix = "arXiv",
 
 
 @ARTICLE{Sidhu2020reconsider,
-       author = "Singh Sidhu, Jagjit and Starkman, Glenn D.",
+       author = "{Sidhu}, Jagjit S. and {Starkman}, Glenn D.",
         title = "{Reconsidering astrophysical constraints on macroscopic dark matter}",
        eprint = "1912.04053",
 archivePrefix = "arXiv",
